# Maths-stuff

./: .breakpoints  .replit  Functions.py  PrimeorComposite.py  README.md  SquareorCube.py  SwitchMode.py  loading.py  main.py  pyproject.toml  test
