[tool.poetry]
name = "repl_python3_beta_Umars-Maths-Stuff"
version = "0.1.0"
description = ""
authors = ["UMARismyname <<>>"]

[tool.poetry.dependencies]
python = "3.10"
replit = "^3.2.4"
pyspellchecker = "^0.6.2"
termcolor2 = "^0.0.3"
black-with-tabs = "^19.10b3"
mypy-extensions = "^0.4.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
