[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["UMARismyname <<>>"]
description = ""
name = "repl_python3_beta_Umars-Maths-Stuff"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "*"
black-with-tabs = "*"
mypy-extensions = "*"
pyspellchecker = "*"
python = "^3.8"
replit = "*"
termcolor2 = "*"
[tool.poetry.dev-dependencies]
